Calendar: Fix missing scrollbar in conflict list

--- a/calendar/templates/default/app.css
+++ b/calendar/templates/default/app.css
@@ -100,7 +100,7 @@
 }
 
 /* Conflict display */
-div.calendar_conflicts {
+.calendar_conflicts {
 	max-height: 540px;
 	overflow-y: auto;
 }
